@@ -5,7 +5,7 @@ Copyright (C) 2002-2014 Jason Evans <jasone@canonware.com>.
 All rights reserved.
 Copyright (C) 2007-2012 Mozilla Foundation.  All rights reserved.
 Copyright (C) 2009-2014 Facebook, Inc.  All rights reserved.
-Copyright (C) 2014 Intel Corporation All Rights Reserved.
+Copyright (C) 2014, 2015 Intel Corporation All Rights Reserved.
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
